--- a/admin/css/board_index.css
+++ b/admin/css/board_index.css
@@ -140,3 +140,9 @@ tbody tr:not(:last-child) {
   color: var(--background-g);
   background: var(--primary-n);
 }
+
+/* 임의추가 내가 */
+/* .background {
+  display: none;
+  visibility: hidden;
+} */
