--- a/admin/css/board_delete.css
+++ b/admin/css/board_delete.css
@@ -1,7 +1,4 @@
 .background {
-  /* 임의추가 내가 */
-  /* display: none; */
-
   position: fixed;
   top: 0;
   left: 0;
@@ -17,8 +14,6 @@
 }
 
 .show {
-  /* display: block; */
-  /* 임의추가 내가 */
   opacity: 1;
   z-index: 1000;
   transition: all 0.5s;
@@ -41,7 +36,7 @@
   /* 임시 지정 */
   width: 934px;
   height: 405px;
-  background: #ffffff;
+  background: #FFFFFF;
   box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
 
@@ -54,18 +49,18 @@
   transition: all 0.5s;
 }
 
-.popup .title {
+.popup .title{
   font-size: 28px;
   font-weight: 500;
   margin-top: 88px;
   margin-bottom: 54px;
 }
 
-.popup input {
+.popup input{
   width: 605px;
   height: 54px;
-  background: #ffffff;
-  border: 1px solid #1d3557;
+  background: #FFFFFF;
+  border: 1px solid #1D3557;
   border-radius: 5px;
   font-weight: 500;
   font-size: 24px;
@@ -74,10 +69,10 @@
   margin-bottom: 54px;
 }
 
-.popup .flex {
+.popup .flex{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center
 }
 
 .flex .popup_btns {
@@ -90,7 +85,7 @@
   line-height: 27px;
   color: #ffffff;
   padding: 4px 17px;
-  background: #e53945;
+  background: #E53945;
   border-radius: 5px;
   margin-left: 8px;
 }
