--- a/admin/css/lecture_view.css
+++ b/admin/css/lecture_view.css
@@ -223,3 +223,8 @@ main h4 {
   line-height: 27px;
   font-weight: 500;
 }
+.lec_view_container .thumbnail_img_preview {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
