--- a/admin/css/coupon_delete.css
+++ b/admin/css/coupon_delete.css
@@ -81,11 +81,11 @@
   }
   
   .del {
-    font-size: 16px;
     line-height: 27px;
     color: #ffffff;
     padding: 4px 17px;
     background: #E53945;
     border-radius: 5px;
-    margin-left: 8px;
+    /* margin-left: 8px;
+    font-size: 16px; */
   }
