--- a/admin/css/coupon_list.css
+++ b/admin/css/coupon_list.css
@@ -33,32 +33,48 @@
   height: 40px;
   border: 1px solid #1d3557;
   border-radius: 5px;
-  margin-bottom: 55px;
-  margin-left: 55px;
+  position: absolute;
+  right: calc(0% + 230px);
+  top: 50px;
 }
 
 ul.coupon_list,
 li.list_contents {
   list-style: none;
-  display: inline-flex;
+  /* display: inline-flex;
   align-items: center;
   gap: 60px;
-  padding-left: 55px;
+  padding-left: 55px; */
 }
 
 figure img {
   border-radius: 10px;
+  width: 198px;
+  height: 136px;
+  position: absolute;
+  /* padding: 40px 50px; */
+  left: 50px;
+  top: 40px;
 }
 
 .big_titles {
   display: flex;
-  align-items: flex-start;
-  gap: 20px 10px;
+  align-items: center;
+  gap: 10px;
+}
+.titles{
+  position: absolute;
+  top: 53px;
+  left: 300px;
 }
 .btns {
   display: flex;
-  flex-direction: column;
   gap: 15px 0;
+  align-items: flex-end;
+  flex-direction: column;
+  position: absolute;
+  right: calc(0% + 50px);
+  top: 50px;
 }
 
 .coupon_list {
@@ -67,6 +83,8 @@ figure img {
   background: #ffffff;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
+  margin-bottom: 30px;
+  position: relative;
 }
 
 div h3 {
@@ -79,7 +97,8 @@ div h3 {
 .sub_titles {
   font-weight: 500;
   font-size: 20px;
-  line-height: 30px;
+  line-height: 27px;
+  margin-top: 20px;
 }
 
 /* 페이지네이션 */
