--- a/admin/css/lecture_view.css
+++ b/admin/css/lecture_view.css
@@ -165,6 +165,7 @@ main h4 {
 .lec_view_img_slide .lec_img_slide_wrapper .lec_img_slides li figure img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .lec_view_img_slide .lec_img_controls {
   position: absolute;
