--- a/admin/css/board_read.css
+++ b/admin/css/board_read.css
@@ -41,18 +41,15 @@
     padding: 110px;
     padding-left: 50px;
     position: relative;
-    font-size: 18px;
-    color: #1d3557;
-}
-.img {
-    width: 100%;
-}
-.read_content p{
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
     color: #1D3557;
 }
+img {
+    width: 100%;
+}
+
 .read_btns{
     position: absolute;
     bottom:calc(0% + 27px);
@@ -65,6 +62,7 @@
     padding: 4px 17px;
     background: #1D3557;
     border-radius: 5px;
+    display: inline-block;
     border: 0;
     outline: 0;
 }
