lecture_up.css w3c 검사 에러 수정

--- a/admin/css/lecture_up.css
+++ b/admin/css/lecture_up.css
@@ -97,8 +97,7 @@ textarea {
 }
 main idv input::placeholder,
 label,
-textarea::placeholder,
-select option:selected {
+textarea::placeholder {
     color: var(--primary-n);
     font-size: 18px;
 }
