프로필 css 추가

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -70,6 +70,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
 }
 .gnb-body .admin-profile .profile-menu {
   margin-top: 30px;
