--- a/admin/css/board_index.css
+++ b/admin/css/board_index.css
@@ -40,7 +40,7 @@
 
 table {
   width: 100%;
-  /* height: 460px; */ 
+  /* height: 460px; */
   background: #ffffff;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px 10px 0px 0px;
@@ -125,7 +125,9 @@ tbody tr:not(:last-child) {
 
 .board_pagination {
   margin-top: 80px;
+  margin-bottom: 200px;
 }
+
 .board_pagination a {
   color: var(--primary-n);
   display: inline-block;
