lecture_up.css 강좌옵션 마진 수정

--- a/admin/css/lecture_up.css
+++ b/admin/css/lecture_up.css
@@ -106,7 +106,7 @@ textarea::placeholder {
     height: 25px;
 }
 .lec_option {
-    justify-content: space-between;
+    margin-top: -70px;
     align-items: center;
     white-space: nowrap;
 }
