lecture_up.css 드래그오버 css 수정

--- a/admin/css/lecture_up.css
+++ b/admin/css/lecture_up.css
@@ -32,6 +32,9 @@
 #drop.drag-over{
     background: var(--highlight-s);
 }
+#drop.drag-over p i.fa-arrow-up-from-bracket {
+    color: #fff;
+}
 #drop.drag-over p span {
     color: #fff;
 }
