--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -199,7 +199,7 @@ body {
   position: relative;
   margin-left: 328px;
   background: var(--background-g);
-  height: auto;
+  height: 100vh;
 }
 .content-body .content-top {
   position: absolute;
