--- a/admin/css/category_list.css
+++ b/admin/css/category_list.css
@@ -1,6 +1,9 @@
 .content-body {
   height: auto;
 }
+main h2.page-title {
+  margin: 81px 0 81px -12px;
+}
 .cate_list_btn_wrapper {
   gap: 30px;
 }
