--- a/admin/css/lecture_view.css
+++ b/admin/css/lecture_view.css
@@ -2,6 +2,9 @@
   opacity: 0;
   visibility: hidden;
 }
+main h2.page-title {
+  margin: 81px 0 0 -12px;
+}
 .lec_view_title_container,
 .lec_view_desc,
 .lec_view_img_slide,
