--- a/user/css/common.css
+++ b/user/css/common.css
@@ -25,6 +25,7 @@ body {
   --primary-n: #1d3557;
   --highlight-s: #457b9d;
   --highlight-m: #a8dad8;
+  --highlight-c:  #3E88F1;
   --background-g: #e0e9ef;
   --background-w: #fff;
   --typography: #161616;
