--- a/user/css/common.css
+++ b/user/css/common.css
@@ -31,6 +31,20 @@ body {
   --typography: #161616;
 }
 
+/* Logo */
+#main-logo {
+  display: inline-block;
+}
+#main-logo a img {
+  display: block;
+  width: auto;
+  height: 100%;
+  object-fit: contain;
+}
+#main-logo a span {
+  display: none;
+}
+
 /* Title, Content, Menu font */
 .main-title {
   font-size: 32px;
