--- a/user/css/common.css
+++ b/user/css/common.css
@@ -144,3 +144,13 @@ body {
 .lec_play:hover i {
   color: var(--primary-r);
 }
+
+/* header */
+header {
+    height: 90px;
+    border-bottom: 1px solid var(--highlight-s);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
+header nav ul {
+    gap: 30px;
+}
