--- a/user/css/common.css
+++ b/user/css/common.css
@@ -169,9 +169,14 @@ header {
 }
 header nav ul {
     gap: 30px;
+    line-height: 90px;
 }
 .member-info {
     gap: 40px;
+}
+.member-info li i {
+    font-size: 24px;
+    line-height: 90px;
 }
 .member-info li a {
     position: relative;
