--- a/user/css/common.css
+++ b/user/css/common.css
@@ -81,8 +81,9 @@ body {
   font-weight: 600;
 }
 .sub-menu-ft {
-  font-size: 16px;
-  line-height: 18px;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
 }
 /* Buttons */
 .y-btn {
