--- a/user/css/common.css
+++ b/user/css/common.css
@@ -168,6 +168,7 @@ header {
     border-bottom: 1px solid var(--highlight-s);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
+
 header nav ul {
     gap: 40px;
     line-height: 90px;
@@ -176,9 +177,51 @@ header nav ul li a {
     transition: 0.3s;
     text-transform: uppercase;
 }
-header nav ul li a:hover {
+header nav ul li:hover > a {
     color: var(--primary-r);
 }
+header nav ul li {
+    position: relative;
+}
+header nav ul li > ul {
+    position: absolute;
+    display: inline-block;
+    width: 200%;
+    text-align: center;
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    border: 1px solid var(--primary-n);
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+}
+header nav ul li > ul li {
+    padding: 7px 0;
+}
+header nav ul li > ul li:first-child {
+    padding-top: 15px;
+}
+header nav ul li > ul li:last-child {
+    padding-bottom: 15px;
+}
+header nav ul li:hover > ul {
+    visibility: visible;
+    opacity: 1;
+}
+header nav ul li > ul:after {
+    content: "";
+    position: absolute;
+    border-style: solid;
+    border-width: 5px;
+    border-color: transparent transparent var(--primary-n) transparent;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 header .search {
     width: 300px;
     height: 32px;
@@ -199,6 +242,7 @@ header .search i {
     top: 50%;
     transform: translateY(-50%);
 }
+
 .member-info {
     gap: 40px;
 }
@@ -211,16 +255,39 @@ header .search i {
 .member-info li i:hover {
     color: var(--primary-r);
 }
-.member-info li a {
+.member-info li {
     position: relative;
 }
-.member-info li a span {
-    clip-path: inset(50% 50% 50% 50%);
+.member-info li span {
     position: absolute;
-    width: 0;
-    height: 0;
+    display: inline-block;
+    width: 300%;
+    text-align: center;
+    padding: 5px 10px;
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    border: 1px solid var(--primary-n);
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
 }
-
+.member-info li:hover span {
+    visibility: visible;
+    opacity: 1;
+}
+.member-info li span:after {
+    content: "";
+    position: absolute;
+    border-style: solid;
+    border-width: 5px;
+    border-color: transparent transparent var(--primary-n) transparent;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 /* Footer */
 footer {
