버튼 배경 흰색 넣어줌!

--- a/user/css/common.css
+++ b/user/css/common.css
@@ -124,15 +124,15 @@ body {
   color: var(--background-w);
 }
 .btn-navy:hover {
-  background: transparent;
+  background: var(--background-w);
   color: var(--primary-n);
 }
 .btn-sky:hover {
-  background: transparent;
+  background: var(--background-w);
   color: var(--highlight-s);
 }
 .btn-red:hover {
-  background: transparent;
+  background: var(--background-w);
   color: var(--primary-r);
 }
 /* others */
