--- a/user/css/cart.css
+++ b/user/css/cart.css
@@ -82,3 +82,66 @@ select {
 .cart_cal .total_price {
   margin-bottom: 25px;
 }
+
+/* 강좌 삭제 팝업 */
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 1000;
+
+  /* 숨기기 */
+  z-index: -1;
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+  z-index: 1000;
+  transition: all 0.5s;
+}
+
+.window {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 760px;
+  height: 253px;
+  background: var(--background-w);
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  transform: translate(-50%, -40%);
+  padding: 37px 0;
+}
+.background.show .popup {
+  transform: translate(-50%, -50%);
+  transition: all 0.5s;
+}
+.popup input {
+  width: 586px;
+  height: 36px;
+  background: var(--background-w);
+  border: 1px solid var(--primary-n);
+  border-radius: 5px;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  margin: 34px 0 39px;
+}
+.popup > div {
+  flex-direction: column;
+  justify-items: center;
+}
+.popup .popup_btns {
+  gap: 136px;
+}
