--- a/user/css/index.css
+++ b/user/css/index.css
@@ -1,5 +1,5 @@
 .banner img {
-    width: 540px;
+    /* width: 540px; */
     height: 460px;
     object-fit: contain;
 }
@@ -7,29 +7,137 @@
     width: 100%;
     height: auto;
 }
-
-.swiper-slide {
+.banner .swiper-slide .row {
+    height: 578px;
+    align-items: center;
+}
+.banner .slide1 {
+    background: var(--highlight-m);
+}
+.banner .slide2 {
+    background: rgba(229, 57, 69, 0.25);
+}
+.banner .slide3 {
+    background: rgba(69, 123, 157, 0.8);
+    color: #fff;
+}
+.banner .slide4 {
+    background: rgba(29, 53, 87, 0.8);
+    color: #fff;
+}
+.banner_text p {
+    margin-top: 36px;
+}
+.banner_text h3 {
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 72px;
+}
+.banner_text h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 54px;
 }
 
-.swiper .swiper-slide {
+.go_category {
+    margin-top: 62px;
 }
-
 .go_category li {
     text-align: center;
+    width: 74px;
+}
+.go_category h3 {
+    margin-bottom: 30px;
 }
 .sprite {
     position: relative;
-    width: 53px;
-    height: 58px;
     display: inline-block;
+    margin-top: 74px;
 }
 .sprite:before {
     content: "";
-    width: 53px;
-    height: 58px;
     background: url(../img/cate_icon.svg) no-repeat;
     position: absolute;
     left: 50%;
     bottom: 100%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-16px);
+}
+.sprite.html:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.css:before {
+    width: 54px;
+    height: 59px;
+    background-position: -67px 0;
+}
+.sprite.javascript:before {
+    width: 54px;
+    height: 59px;
+    background-position: -138px 0;
+}
+.sprite.react:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.sql:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.python:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.mobile:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.figma:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.adobexd:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.sketch:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.photoshop:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+.sprite.illustrator:before {
+    width: 54px;
+    height: 59px;
+    background-position: 0 0;
+}
+
+.class_slide {
+    margin-top: 80px;
+}
+.class {
+    margin-bottom: 55px;
+}
+.class:last-child {
+    margin-bottom: 0;
+}
+
+.ad_fastcode {
+    margin-top: 217px;
+}
+
+.notice {
+    margin-top: 180px;
+    margin-bottom: 54px;
 }
