--- a/user/css/index.css
+++ b/user/css/index.css
@@ -1,3 +1,37 @@
+/* Tags */
+.mini-tag {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 52px;
+    height: 30px;
+    border-radius: 10px;
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: #fff;
+}
+.new-tag {
+    background: var(--highlight-m);
+}
+.hit-tag {
+    background: var(--primary-r);
+}
+.easy-tag {
+    background: var(--highlight-s);
+}
+.difficult-tag {
+    background: var(--primary-n);
+}
+
+.member-info li .hidden,
+.hidden{
+    display: none;
+}
+
+section.banner{
+    padding-top: 90px;
+}
 .banner img {
     /* width: 540px; */
     height: 460px;
@@ -8,7 +42,7 @@
     height: auto;
 }
 .banner .swiper-slide .row {
-    height: 578px;
+    height: 586px;
     align-items: center;
 }
 .banner .slide1 {
@@ -38,6 +72,38 @@
     font-size: 24px;
     line-height: 54px;
 }
+.banner .swiper-button-next{
+    right: 145px;
+}
+.banner .swiper-button-prev{
+    left: 145px;
+}
+.banner .swiper-button-next,
+.banner .swiper-button-prev{
+    color: #fff;
+    transition: 0.5s;
+}
+.banner .swiper-button-next:hover,
+.banner .swiper-button-prev:hover{
+    color: var(--primary-r);
+}
+section.banner .swiper-pagination{
+    bottom: 25px;
+}
+section.banner .swiper-pagination .swiper-pagination-bullet{
+    background: var(--primary-n);
+    opacity: 1;
+    margin: 0 20px;
+    outline-offset: 0;
+    transition: 0.5s;
+}
+section.banner .swiper-pagination .swiper-pagination-bullet-active{
+    background: var(--primary-r);
+    opacity: 1;
+    outline: 1px solid var(--primary-r);
+    outline-offset: 15px;
+}
+
 
 .go_category {
     margin-top: 62px;
@@ -47,80 +113,125 @@
     width: 74px;
 }
 .go_category h3 {
-    margin-bottom: 30px;
+    margin-bottom: 36px;
 }
 .sprite {
     position: relative;
     display: inline-block;
-    margin-top: 74px;
+    margin-top: 90px;
 }
+.go_category li:hover .sprite{
+    color: var(--primary-r);
+    transition: 0.3s;
+}
+.go_category li:hover .sprite:before{
+    transform: translateX(-50%) translateY(-36px);
+}
+
 .sprite:before {
     content: "";
     background: url(../img/cate_icon.svg) no-repeat;
     position: absolute;
     left: 50%;
     bottom: 100%;
-    transform: translateX(-50%) translateY(-16px);
+    transform: translateX(-50%) translateY(-18px);
+    transition: transform 0.3s;
 }
 .sprite.html:before {
     width: 54px;
     height: 59px;
     background-position: 0 0;
 }
+.go_category li:hover .sprite.html:before{
+    background-position: 0 -147px;
+}
 .sprite.css:before {
     width: 54px;
     height: 59px;
     background-position: -67px 0;
+}
+.go_category li:hover .sprite.css:before{
+    background-position: -67px -147px;
 }
 .sprite.javascript:before {
     width: 54px;
     height: 59px;
     background-position: -138px 0;
 }
+.go_category li:hover .sprite.javascript:before{
+    background-position: -138px -147px;
+}
 .sprite.react:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 68px;
+    height: 60px;
+    background-position: -209px 0;
+}
+.go_category li:hover .sprite.react:before{
+    background-position: -209px -147px;
 }
 .sprite.sql:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 58px;
+    height: 60px;
+    background-position: -292px 0;
+}
+.go_category li:hover .sprite.sql:before{
+    background-position: -292px -147px;
 }
 .sprite.python:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 60px;
+    height: 60px;
+    background-position: -364px 0;
+}
+.go_category li:hover .sprite.python:before{
+    background-position: -364px -147px;
 }
 .sprite.mobile:before {
-    width: 54px;
+    width: 37px;
     height: 59px;
-    background-position: 0 0;
+    background-position: -8px -74px;
+}
+.go_category li:hover .sprite.mobile:before{
+    background-position: -8px -221px;
 }
 .sprite.figma:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 42px;
+    height: 60px;
+    background-position: -73px -74px;
+}
+.go_category li:hover .sprite.figma:before{
+    background-position: -73px -221px;
 }
 .sprite.adobexd:before {
-    width: 54px;
+    width: 59px;
     height: 59px;
-    background-position: 0 0;
+    background-position: -136.5px -74px;
+}
+.go_category li:hover .sprite.adobexd:before{
+    background-position: -136.5px -221px;
 }
 .sprite.sketch:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 65px;
+    height: 60px;
+    background-position: -211px -74px;
+}
+.go_category li:hover .sprite.sketch:before{
+    background-position: -211px -221px;
 }
 .sprite.photoshop:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 60px;
+    height: 60px;
+    background-position: -290px -74px;
+}
+.go_category li:hover .sprite.photoshop:before{
+    background-position: -290px -221px;
 }
 .sprite.illustrator:before {
-    width: 54px;
-    height: 59px;
-    background-position: 0 0;
+    width: 60px;
+    height: 60px;
+    background-position: -365px -74px;
+}
+.go_category li:hover .sprite.illustrator:before{
+    background-position: -365px -221px;
 }
 
 .class_slide {
@@ -132,12 +243,127 @@
 .class:last-child {
     margin-bottom: 0;
 }
+.class h3,
+.class img{
+    margin-bottom: 18px;
+}
+.class img{
+    width: 100%;
+}
+.class h3 em{
+    color: var(--primary-r);
+}
+.class .swiper-button-next,
+.class .swiper-button-prev{
+    color: var(--primary-n);
+    transition: 0.5s;
+}
+.class .swiper-button-next:hover,
+.class .swiper-button-prev:hover{
+    color: var(--primary-r);
+}
+
 
 .ad_fastcode {
     margin-top: 217px;
+    background: url(../img/ad_fastcode_bg.jpg) no-repeat;
 }
+.ad_fastcode .container{
+    padding-top: 270px;
+}
+.ad_fastcode .ad_fastcode_title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 43px;
+}
+.ad_fastcode #tabs{
+    margin-top: 54px;
+}
+#tabs ul.row{
+    text-align: center;
+    height: 72px;
+    line-height: 72px;
+    gap: 24px;
+}
+#tabs ul li{
+    background: var(--highlight-s);
+    border-radius: 5px;
+    transition: 0.3s;
+}
+#tabs ul li a{
+    display: block;
+}
+#tabs ul li a i{
+    font-size: 30px;
+    line-height: 72px;
+    margin-right: 30px;
+}
+#tabs ul li.ui-tabs-active{
+    background: var(--primary-r);
+}
+#tabs ul li.ui-state-hover{
+    background: var(--highlight-m);
+}
+#tabs ul li.ui-state-hover a{
+    color: #000;
+}
+#tabs ul li a{
+    color: #fff;
+    transition: 0.3s;
+}
+#tabs div.row{
+    flex-direction: row-reverse;
+    margin-top: 90px;
+    padding-bottom: 53px;
+}
+#tabs div.row .tab_thumbnail{
+    position: relative;
+}
+#tabs div.row img{
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+}
+#tabs .description h3{
+    font-weight: 700;
+font-size: 70px;
+line-height: 75px;
+}
+#tabs .description h3 i{
+    color:var(--primary-r)
+}
+#tabs .description h4{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 50px;
+}
+#tabs .description p{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+}
+#tabs .description span.num{
+    font-weight: 700;
+    font-size: 170px;
+    line-height: 150px;
+    color: rgba(229, 57, 69, 0.25);
+}
+#tabs .description span{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+}
+
 
 .notice {
     margin-top: 180px;
     margin-bottom: 54px;
+}
+.notice .notice_list li{
+    position: relative;
+}
+.notice .notice_list li .fa-angle-right{
+    position: absolute;
+    top: 50%; right: 0;
+    transform: translateY(-50%);
 }
